1999-05-20  Alex Lancaster  <alex@santafe.edu>

	* batch.setup, model.setup, LICENSE: Remove files, rename LICENSE
	to COPYING.

	* COPYING, batch.scm: Add files.

	* README: Note replacement of {batch, model}.setup files with
	single `batch.scm' file.

	* main.m (main): Use Lisp Archiver instance to create the instance
	of MousetrapBatchSwarm from file `batch.scm' using `batchSwarm' a
	key.

	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -go]): Fixed printf
	to refer to `--batch or -b' options.
	([MousetrapBatchSwarm -buildObjects]): Use Lisp Archiver instance
	(created from `batch.scm' file) in place of using ObjectLoader to
	create the MousetrapModelSwarm instance with `modelSwarm' as key.
	Updated all comments accordingly.  
	Don't load `self' from `model.setup' file, which is now redundant,
	the creation of `self' from the batch.scm file parameters has now
	moved to main.m.

1999-02-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* main.m (main): Use initSwarmApp instead of initSwarm; add
	version and bug report address.

1998-10-30  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-_setupMousetraps_]): Remove window argument, pick up both
	displayWindow and scheduleItem from instance variables.  Use
	displayWindow instead of window (the former argument).
	([MousetrapObserverSwarm -_displayWindowDeath_:]): Call
	_setupMousetraps_ without argument.
	([MousetrapObserverSwarm -buildObjects]): Likewise.  Setup canvas
	to call _scheduleItemCanvasDeath_ upon closing of scheduleItem
	canvas.
	([MousetrapObserverSwarm -_scheduleItemCanvasDeath_:]): New method.
	([MousetrapObserverSwarm -_update_]): Don't call scheduleItem update 
	unless scheduleItem is non-nil.

	* Mousetrap.m ([Mousetrap -trigger]): Don't call scheduleItem
	trigger unless scheduleItem is non-nil.
	([Mousetrap -trigger]): Don't set trigger info unless scheduleItem
	is non-nil.

1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
