@@ -42,12 +42,14 @@ main (int argc, const char **argv)
                        createEnd];  
 
       // retrieve the object from the archiver, if it can't be found
-      // just create the default object; note that the call to the
+      // just raise an event; note that the call to the
       // archiver will actually *instantiate* the object if the
       // parameters are found in the Lisp file
       if ((theTopLevelSwarm = 
            [archiver getObject: "batchSwarm"]) == nil)
-        theTopLevelSwarm = [MousetrapBatchSwarm create: globalZone];
+        raiseEvent(InvalidOperation, 
+                   "Can't find archiver file or appropriate key");
+          
     }
 
   // either way, build objects, actions, activate, and run
